snapshots/syntax/library/functions/graphics/partition/partition_class_usage.snap
---
source: src/syntax/library/functions/graphics/partition.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: m_range
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: PublicKeyword
          text: Public
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: CategorizeValue
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: Identifier
              text: num
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: LongKeyword
              text: Long
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: m_range
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Partition
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: num
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "0"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "1000"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "100"
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
